Fixed Privacy modal width on mobile devices and switched the opt-out message to English.

--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -77,7 +77,7 @@ ul.social li.mail:hover {
 @media (max-width: 360px) {
   #piwik {
     height: 305px;
-    width: 275px;
+    width: 280px;
   }
 }
 
